syntax = "proto3";

package explorer;

option go_package = "/pb";

// Service definition
service ExplorerService {
    rpc GetCurrentBlock(GetCurrentBlockRequest) returns (GetCurrentBlockResponse) {}
}

// Enum for sort direction
enum SortOrder {
    ASC = 0;
    DESC = 1;
}

// Block message definition
message Block {
    string hash = 1;
    string number = 2;
    string miner_hash = 3;
    string parent_hash = 4;
    uint64 gas_limit = 5;
    uint64 gas_used = 6;
    uint64 nonce = 7;
    uint64 size = 8;
    string difficulty = 9;
    bool is_pos = 10;
    string base_fee_per_gas = 11;
    int32 transactions_count = 12;
    int32 withdrawals_count = 13;
    uint64 timestamp = 14;
}

// === Requests & Responses ===

message GetCurrentBlockRequest {}

message GetCurrentBlockResponse {
    Block block = 1;
}

message GetBlockRequest {
    oneof identifier {
        string hash = 1;
        uint64 number = 2;
    }
}

message GetBlockResponse {
    Block block = 1;
}

message GetBlocksRequest {
    uint64 from = 1;
    uint64 to = 2;
    uint64 limit = 3;
    uint64 offset = 4;
    SortOrder sort_order = 5;
}

message GetBlocksResponse {
    repeated Block blocks = 1;
}

